Added JWT filter, security config, cache config and fixes